@@ -1,2 +1,0 @@
-Astropy-helpers is an Astropy affiliated package for supporting building
-and installing of Astropy and its related packages.
