@@ -1,56 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/01/17 09:51:28 wiz Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/astropy_helpers/__init__.py
-${PYSITELIB}/astropy_helpers/__init__.pyc
-${PYSITELIB}/astropy_helpers/__init__.pyo
-${PYSITELIB}/astropy_helpers/commands/__init__.py
-${PYSITELIB}/astropy_helpers/commands/__init__.pyc
-${PYSITELIB}/astropy_helpers/commands/__init__.pyo
-${PYSITELIB}/astropy_helpers/commands/_dummy.py
-${PYSITELIB}/astropy_helpers/commands/_dummy.pyc
-${PYSITELIB}/astropy_helpers/commands/_dummy.pyo
-${PYSITELIB}/astropy_helpers/commands/build_ext.py
-${PYSITELIB}/astropy_helpers/commands/build_ext.pyc
-${PYSITELIB}/astropy_helpers/commands/build_ext.pyo
-${PYSITELIB}/astropy_helpers/commands/build_sphinx.py
-${PYSITELIB}/astropy_helpers/commands/build_sphinx.pyc
-${PYSITELIB}/astropy_helpers/commands/build_sphinx.pyo
-${PYSITELIB}/astropy_helpers/commands/src/compiler.c
-${PYSITELIB}/astropy_helpers/commands/test.py
-${PYSITELIB}/astropy_helpers/commands/test.pyc
-${PYSITELIB}/astropy_helpers/commands/test.pyo
-${PYSITELIB}/astropy_helpers/conftest.py
-${PYSITELIB}/astropy_helpers/conftest.pyc
-${PYSITELIB}/astropy_helpers/conftest.pyo
-${PYSITELIB}/astropy_helpers/distutils_helpers.py
-${PYSITELIB}/astropy_helpers/distutils_helpers.pyc
-${PYSITELIB}/astropy_helpers/distutils_helpers.pyo
-${PYSITELIB}/astropy_helpers/git_helpers.py
-${PYSITELIB}/astropy_helpers/git_helpers.pyc
-${PYSITELIB}/astropy_helpers/git_helpers.pyo
-${PYSITELIB}/astropy_helpers/openmp_helpers.py
-${PYSITELIB}/astropy_helpers/openmp_helpers.pyc
-${PYSITELIB}/astropy_helpers/openmp_helpers.pyo
-${PYSITELIB}/astropy_helpers/setup_helpers.py
-${PYSITELIB}/astropy_helpers/setup_helpers.pyc
-${PYSITELIB}/astropy_helpers/setup_helpers.pyo
-${PYSITELIB}/astropy_helpers/sphinx/__init__.py
-${PYSITELIB}/astropy_helpers/sphinx/__init__.pyc
-${PYSITELIB}/astropy_helpers/sphinx/__init__.pyo
-${PYSITELIB}/astropy_helpers/sphinx/conf.py
-${PYSITELIB}/astropy_helpers/sphinx/conf.pyc
-${PYSITELIB}/astropy_helpers/sphinx/conf.pyo
-${PYSITELIB}/astropy_helpers/utils.py
-${PYSITELIB}/astropy_helpers/utils.pyc
-${PYSITELIB}/astropy_helpers/utils.pyo
-${PYSITELIB}/astropy_helpers/version.py
-${PYSITELIB}/astropy_helpers/version.pyc
-${PYSITELIB}/astropy_helpers/version.pyo
-${PYSITELIB}/astropy_helpers/version_helpers.py
-${PYSITELIB}/astropy_helpers/version_helpers.pyc
-${PYSITELIB}/astropy_helpers/version_helpers.pyo
