@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2022/01/17 09:51:28 wiz Exp $
-
-BLAKE2s (astropy-helpers-4.0.1.tar.gz) = 9ae57d2f3f3fbdfaffd72c935975a0a5d3f52d1049391b08d6e6ef5d64e3109f
-SHA512 (astropy-helpers-4.0.1.tar.gz) = 11c41f6474b41a8cd89d8cf5b31c5508bba8142e92342761fae602b19694215e0fc97091e83b6a7bc82fbc4b9bc5c4a6cd825f040d63c4629f069ec07119a705
-Size (astropy-helpers-4.0.1.tar.gz) = 52904 bytes
